Fix unnecessary z-index setting

--- a/src/components/funnel/funnel.scss
+++ b/src/components/funnel/funnel.scss
@@ -20,7 +20,7 @@
         flex-direction: column;
         align-items: flex-end;
         text-align: right;
-        z-index: 1;
+        z-index: 0;
         margin-right: 5%;
         flex: 2;
       }
